layout Issues

--- a/CookForMe/public/stylesheets/checkout.css
+++ b/CookForMe/public/stylesheets/checkout.css
@@ -6,6 +6,7 @@
     border: 0px none rgb(71, 71, 71);
     font: normal normal normal 16px/24px 'Open Sans', sans-serif;
     outline: rgb(71, 71, 71) none 0px;
+    padding-bottom: 500px;
 }/*#MyBasketDIV_135*/
 
 #MyBasketDIV_1 {
